--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
+python = ">=3.9,<4.0"
+dvc = "^3.50.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
