--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 dvc = "^3.50.1"
+dvc-s3 = "^3.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
