--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ packages = [
 python = ">=3.9,<4.0"
 dvc = "^3.50.1"
 dvc-s3 = "^3.2.0"
+argo-workflows = "6.4.8"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
